# server/controller/initialize/createConfig.go
@@ -8,7 +8,17 @@ import (
 	"linktree_core/utils/result/code"
 )
 
-// CreateConfig 验证数据库连接
+// CreateConfig
+// @Tags      	Init
+// @Summary   	创建配置文件
+// @Description  创建配置文件
+// @Security  	ApiKeyAuth
+// @Accept    	application/json
+// @Produce   	application/json
+// @Param     	data  body    dto.SetupOpt	true	"config文件参数"
+// @Success   	200  {object} result.Response
+// @Failure   	404  {object} result.Response
+// @Router    	/init/createConfig [post]
 func (InitializeController) CreateConfig(ctx *gin.Context) {
 	var setupOpt dto.SetupOpt
 	if err := ctx.ShouldBind(&setupOpt); err != nil {
