# server/controller/initialize/verifyDB.go
@@ -12,7 +12,17 @@ type request struct {
 	dto.Dsn
 }
 
-// VerifyDB 验证数据库连接
+// VerifyDB
+// @Tags      	Init
+// @Summary   	验证数据库连接
+// @Description  验证数据库连接
+// @Security  	ApiKeyAuth
+// @Accept    	application/json
+// @Produce   	application/json
+// @Param     	data  body    dto.Dsn	true	"DB连接参数"
+// @Success   	200  {object} result.Response
+// @Failure   	404  {object} result.Response
+// @Router    	/init/verifyDB [post]
 func (InitializeController) VerifyDB(ctx *gin.Context) {
 	var dsn request
 	if err := ctx.ShouldBind(&dsn); err != nil {
