# server/controller/initialize/verifyRedis.go
@@ -8,7 +8,17 @@ import (
 	"linktree_core/utils/result/code"
 )
 
-// VerifyRedis 验证redis的连接
+// VerifyRedis
+// @Tags      	Init
+// @Summary   	验证redis的连接
+// @Description  验证redis的连接
+// @Security  	ApiKeyAuth
+// @Accept    	application/json
+// @Produce   	application/json
+// @Param     	data  body    dto.RedisOpt	true	"redis连接参数"
+// @Success   	200  {object} result.Response
+// @Failure   	404  {object} result.Response
+// @Router    	/init/verifyRedis [post]
 func (InitializeController) VerifyRedis(ctx *gin.Context) {
 	var rOpt dto.RedisOpt
 	if err := ctx.ShouldBind(&rOpt); err != nil {
