# server/controller/sysInfo/sysInfo.go
@@ -7,7 +7,16 @@ import (
 	"linktree_core/utils/result/code"
 )
 
-// GetSysInfo 获取系统信息
+// GetSysInfo
+// @Tags      	SysInfo
+// @Summary   	获取系统信息
+// @Description  获取系统信息
+// @Security  	ApiKeyAuth
+// @Accept    	application/json
+// @Produce   	application/json
+// @Success   	200  {object} result.Response{data=dto.SysInfo}
+// @Failure   	404  {object} result.Response
+// @Router    	/sysInfo/all [get]
 func (SysInfoController) GetSysInfo(c *gin.Context) {
 	result.APIResponse(c, code.OK, service.SysInfoService.GetSysInfo())
 }
