# server/middleware/auth.go
@@ -8,8 +8,6 @@ import (
 // Auth 登录鉴权
 func Auth() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
-		//logger.Log.Debug("auth")
-		//logger.Log.Debug(ctx.GetHeader("Authorization"))
 		if ctx.IsWebsocket() {
 			global.GLOG.Debug("is")
 		} else {
